# POC-agentic-office

./: .gitignore  AGENTS.md  README.md  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.codex/: config.toml
.codex/agents/: agent-bridge.toml  api-conventions.toml  architecture.toml  auth.toml  chat.toml  db.toml  frontend-auth.toml  logs.toml  realtime.toml  review.toml  tests.toml
apps/ai-service/: .env.example  README.md  package.json  pyproject.toml  requirements.txt
apps/ai-service/app/: main.py
apps/ai-service/app/services/: __init__.py  ai_news_agent.py  linkedin_writer.py  sprite_sheet_generator.py  weekly_report_agent.py
apps/ai-service/test-assets/: test.json
apps/backend/: .env.example  drizzle.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/backend/drizzle/: 0000_rapid_the_phantom.sql  0002_sturdy_timeslip.sql  0003_remarkable_rogue.sql
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.vue  env.d.ts  main.ts  (+1 more)
docs/: ai-service-implementation-guide.md  backend-api-reference.md  chat-room-implementation.md  frontend-agent-api-audit.md  frontend-backend-api-mismatches.md  microsoft-oauth-migration-plan.md  sprite-generation-flow.md
docs/backend-spec/: 01-architecture.md  02-auth.md  03-domain-model.md  04-chat.md  05-realtime-websocket.md  06-agent-bridge.md  07-persistence.md  08-api-conventions.md  09-error-codes.md  10-testing.md
docs/frontend-auth/: 01-auth-flow.md  02-state-management.md  03-api-integration.md  04-routing.md  05-security.md
(+128 files in other folders)
