[project]
name = "agentic-office-ai-service"
version = "0.0.1"
description = "FastAPI service for AI workflows in the agentic office monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
