[project]
name = "agentic-office-ai-service"
version = "0.0.1"
description = "FastAPI service for AI workflows in the agentic office monorepo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.0",
  "pydantic==2.10.6",
  "python-dotenv==1.0.1",
  "openai",
  "python-multipart==0.0.20",
  "pillow==11.2.1",
  "cloudinary==1.44.1",
  "google-api-python-client==2.169.0",
  "google-auth==2.40.1",
  "google-auth-oauthlib==1.2.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
